@@ -1,4 +1,8 @@
 # detect target architecture
+!IF "$(CPU)" == ""
+CPU=$(PROCESSOR_ARCHITECTURE)
+!ENDIF
+
 !IF "$(CPU)" == "i386"
 TARGETDIR = ..\..\..\bin\win32\dev
 ADD_LFLAGS = /MACHINE:X86
